@@ -1,3 +1,7 @@
+2025-02-26 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Store user name rather than uid in log records, resolves #363
+
 2025-02-24 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Allow import reaction to target configuration group, resolves #367
